# compress

./: .gitattributes  .gitignore  Cargo.toml  README.md  mise.toml
extra/comptest/: Cargo.toml
extra/comptest/src/: main.rs
src/: fse.rs  lib.rs  prefix.rs  slice_window.rs  stats.rs
src/deflate/: adler32.rs  deflate.rs  inflate.rs  mod.rs  tests.rs
src/entropy/: fse.rs  mod.rs  prefix.rs
src/entropy/prefix/: decode.rs  encode.rs  prefix.rs  simple.rs
src/lz/: cache.rs  lz.rs  lzss.rs
src/lz/lcp/: lcp.rs  sais.rs  tests.rs
src/lz/match_finder/: lcp.rs  match_finder.rs  sais.rs  tests.rs
src/num/: bits.rs  math.rs  mod.rs  nibble.rs  vl_integer.rs
src/stk1/: s7s.rs  stk1.rs
