[package]
name = "compress"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = { version = "0.2" }

[dev-dependencies]
base64 = { version = "0.22" }
rand = {version = "0.9"}

# [features]
# default = ["std"]
# std = []

# [profile.release]
# debug = true
# panic = "abort"

[workspace]
members = [
    "extra/comptest",
]
